# horsie-pi

./: Cargo.toml
.github/workflows/: embedded-rust.yml  test.yml
cad/: .gitignore  breadboard-components.3mf  offshape.toml
embedded-drivers/: Cargo.toml
embedded-drivers/src/: lib.rs
embedded-drivers/src/hc_sr04_async/: mod.rs
embedded-drivers/src/husb238_async/: README.md  error.rs  mod.rs  reg.rs
embedded-drivers/src/ina260_async/: README.md  error.rs  mod.rs  reg.rs
peripheral-controller/: Cargo.toml  diagram.json
peripheral-controller/.cargo/: config.toml
peripheral-controller/examples/: configure_steppers.rs  hello_tinys3.rs  pubsub.rs  rotary_input.rs  stepper_ui.rs
peripheral-controller/src/: lib.rs  main.rs  panic.rs  peripherals.rs  shared_bus.rs
peripheral-controller/src/stepper/: error.rs  mod.rs  motor_constants.rs  ramp_generator.rs  tune.rs  uart.rs
peripheral-controller/src/uart/: bus.rs
peripheral-controller/src/ui/: color.rs  mod.rs  rgb_button.rs
peripheral-controller/src/ui/input/: ano_rotary_encoder.rs  mod.rs
peripheral-controller/src/user_input/: mod.rs
scratch/: Cargo.toml  wokwi.toml
scratch/.cargo/: config.toml
scratch/examples/: alarm_contention.rs  hello_tinys3.rs  joystick.rs  led_effects.rs  led_matrix_icons.rs  oled.rs  power_devices.rs  radar.rs  rainbow_leds.rs  sleep_mode_led.rs  transistor_logic_boost.rs  ultrasonic_range.rs
scratch/src/: animation.rs  lib.rs  main.rs  power_led.rs  stacked_ring_display.rs
scratch/src/power/: mod.rs
scratch/src/power/sensor/: mod.rs
scratch/src/power/usb_pd/: mod.rs
scratch/src/stepper/: motor_constants.rs  tune.rs  uart.rs
scratch/src/ultrasonic_range/: hc_sr04.rs  mod.rs
scratch/src/ws2812/: mod.rs
scratch/src/ws2812/effects/: fire.rs  meteor.rs  mod.rs
tiny-ros2-agent/: Cargo.toml
tiny-ros2-agent/examples/: serial.rs
tiny-ros2-client/: Cargo.toml
tiny-ros2-codec/: Cargo.toml
tiny-ros2-codec/src/: codec.rs  error.rs  foundation.rs  lib.rs  message.rs
