cargo-features=["per-package-target"]

[package]
description  ="Experiments created during the development of the project"
edition      ="2021"
forced-target="thumbv6m-none-eabi"
name         ="scratch"
publish      =false
version      ="0.1.0"

[dependencies]
bondrewd              ={version="0.1.14", default-features=false, features=["derive", "hex_fns", "slice_fns"]}
byte-slice-cast       ={version="1.2.0", default-features=false}
cortex-m              ={version="0.7.6", features=["inline-asm"]}
cortex-m-rt           ="0.7.0"
cyw43                 ={git="https://github.com/embassy-rs/embassy", package="cyw43", rev="daeb497045d47db3afa926b4e0e9e17973a544d5", features=["defmt", "firmware-logs"]}
cyw43-pio             ={git="https://github.com/embassy-rs/embassy", package="cyw43-pio", rev="daeb497045d47db3afa926b4e0e9e17973a544d5", features=["defmt", "overclock"]}
defmt                 ="0.3"
defmt-rtt             ="0.4"
display-interface     ={version="0.4.1"}
display-interface-i2c ={version="0.4.0"}
embassy-embedded-hal  ={version="0.1.0", git="https://github.com/embassy-rs/embassy", package="embassy-embedded-hal", rev="daeb497045d47db3afa926b4e0e9e17973a544d5", features=["nightly", "time"]}
embassy-executor      ={version="0.3.0", features=["arch-cortex-m", "defmt", "executor-interrupt", "executor-thread", "integrated-timers", "nightly"]}
embassy-futures       ={version="0.1.0"}
embassy-macros        ={version="0.2.1", git="https://github.com/embassy-rs/embassy", package="embassy-macros", rev="daeb497045d47db3afa926b4e0e9e17973a544d5"}
embassy-net           ={version="0.1.0", git="https://github.com/embassy-rs/embassy", package="embassy-net", rev="daeb497045d47db3afa926b4e0e9e17973a544d5", features=["defmt", "dhcpv4", "medium-ethernet", "nightly", "tcp", "udp"]}
embassy-rp            ={version="0.1.0", git="https://github.com/embassy-rs/embassy", package="embassy-rp", rev="daeb497045d47db3afa926b4e0e9e17973a544d5", features=["critical-section-impl", "defmt", "nightly", "time-driver", "unstable-pac", "unstable-traits"]}
embassy-sync          ={version="0.3.0", git="https://github.com/embassy-rs/embassy", package="embassy-sync", rev="daeb497045d47db3afa926b4e0e9e17973a544d5", features=["defmt"]}
embassy-time          ={version="0.1.3", features=["defmt", "defmt-timestamp-uptime", "nightly", "unstable-traits"]}
embassy-usb           ={version="0.1.0", git="https://github.com/embassy-rs/embassy", package="embassy-usb", rev="daeb497045d47db3afa926b4e0e9e17973a544d5", features=["defmt"]}
embedded-graphics     ={version="0.8.1", features=["defmt"]}
embedded-graphics-core={version="0.4.0", features=["defmt"]}
embedded-hal          ="0.2.7"
embedded-hal-1        ={package="embedded-hal", version="=1.0.0-rc.1"}
embedded-hal-async    ="1.0.0-rc.1"
embedded-hal-bus      ={version="0.1.0-rc.1", features=["async"]}
embedded-io           ="0.6.0"
embedded-io-async     ={version="0.5.0", features=["defmt-03"]}
embedded-storage      ={version="0.3"}
fixed                 ="1.23.1"
fixed-macro           ="1.2"
futures               ={version="0.3.17", default-features=false, features=["async-await", "cfg-target-has-atomic", "unstable"]}
heapless              ="0.7.15"
median                ={version="0.3.2", default-features=false}
micromath             ="2.0.0"
num_enum              ={version="0.7.0", default-features=false}
panic-probe           ={version="0.3", features=["print-defmt"]}
pio                   ="0.2.1"
pio-proc              ="0.2"
portable-atomic       ={version="1.4.3", default-features=false, features=["critical-section"]}
profont               ="0.7.0"
ramp-maker            ="0.2"
rand                  ={version="0.8.4", default-features=false, features=["small_rng"]}
rgb                   ={version="0.8", features=["as-bytes", "grb"]}
spin                  ={version="0.9.8", default-features=false, features=["lock_api", "portable_atomic", "spin_mutex"]}
ssd1306               ={version="0.8.3", features=["graphics"]}
st7789                ="0.6.1"
static_cell           ={version="1.1", features=["nightly"]}
talc                  ="3.1.1"
tmc2209               ="0.2.2"
typenum               ="1.17.0"
usbd-hid              ="0.6.1"

# Project dependencies
hp-embedded-drivers={path="../embedded-drivers"}
