cargo-features = ["per-package-target"]

[package]
edition       = "2021"
forced-target = "x86_64-unknown-linux-gnu"
name          = "tiny-ros2-agent"
version       = "0.1.0"

[dependencies]
bytes              = {version = "1.5.0", default-features = false}
futures            = "0.3.28"
tiny-ros2-codec    = {path = "../tiny-ros2-codec"}
tokio              = {version = "1.33.0", features = ["full"]}
tokio-serial       = {version = "5.4.4", features = ["libudev", "rt"]}
tokio-util         = {version = "0.7.9", features = ["codec"]}
tracing            = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["env-filter", "local-time"]}
